Fix issue with hit testing on the layer tree.

When wheel event listeners were moved to the layer tree instead of
on individual layers in https://codereview.chromium.org/1639363002

We should have stopped hit testing on whether there was a wheel
event listener or not. These properties are checked on the general
page before processing the event.

BUG=597913
CQ_INCLUDE_TRYBOTS=tryserver.blink:linux_blink_rel

Review URL: https://codereview.chromium.org/1843813002

Cr-Commit-Position: refs/heads/master@{#383872}

Former-commit-id: 913f48327c7c50fa79df5af74d68fc7af7d3e2f4