cc/trees/layer_tree_impl.cc
@@ -1784,10 +1784,7 @@ struct HitTestVisibleScrollableOrTouchableFunctor {
   bool operator()(LayerImpl* layer) const {
     return layer->IsDrawnRenderSurfaceLayerListMember() ||
            ScrollsAnyDrawnRenderSurfaceLayerListMember(layer) ||
-           !layer->touch_event_handler_region().IsEmpty() ||
-           layer->layer_tree_impl()->event_listener_properties(
-               EventListenerClass::kMouseWheel) !=
-               EventListenerProperties::kNone;
+           !layer->touch_event_handler_region().IsEmpty();
   }
 };
 
